fix: bg color and align bloc

--- a/framework/src/scss/components/_maincontent.scss
+++ b/framework/src/scss/components/_maincontent.scss
@@ -87,3 +87,6 @@
 .background{
 	background-color: #E5E5E5;
 }
+.chart{
+	height:300px;
+}
